# bmstu-ds

./: README.md
lab_01/: application.py  installer.py  pyproject.toml  run.py
lab_02/: file1.txt  file1.txt__settings_rotor_0.txt  file1.txt__settings_rotor_1.txt  file1.txt__settings_rotor_2.txt  img.png__settings_rotor_0.txt  img.png__settings_rotor_1.txt  img.png__settings_rotor_2.txt  img.txt  img.txt__cipher.txt  img.txt__settings_rotor_0.txt  img.txt__settings_rotor_1.txt  img.txt__settings_rotor_2.txt  main.py  misc.py  pyproject.toml
lab_02/data/: file1.txt  file1.txt__settings_rotor_0.txt  file1.txt__settings_rotor_1.txt  file1.txt__settings_rotor_2.txt  img.png__settings_rotor_0.txt  img.png__settings_rotor_1.txt  img.png__settings_rotor_2.txt
lab_02/enigma/: __init__.py  enigma.py  mapper.py  reflector.py  rotor.py
lab_03/: CMakeLists.txt  main.c  result  tables.h  to_decr
lab_04/: main.py  pyproject.toml
lab_04/.rsa/: private.key  public.key
lab_04/custom_rsa/: calculations.py  client.py  keygen.py  misc.py  owner.py
lab_04/data/: haha_encrypted.txt
lab_05/: main.py  pyproject.toml
lab_05/.signature/: public_key.cer  signature.sig
lab_05/signature/: misc.py  signature.py
lab_06/: main.py  pyproject.toml  test.txt  test_compressed.txt
