[tool.poetry]
name = "lab_02"
version = "0.1.0"
description = ""
authors = ["d_ivahnencko <ivahnencko01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
